--- a/whitepaper.html
+++ b/whitepaper.html
@@ -1,126 +1,65 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>PoorCoin — Whitepaper</title>
-  <meta name="description" content="PoorCoin (POOR) — community-driven meme token on BNB Smart Chain. Whitepaper, tokenomics, links and roadmap." />
+<!doctype html><html lang="en"><head>
+<meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
+<title>PoorCoin — Whitepaper</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+<style>
+  body{font-family:Inter,system-ui,Segoe UI,Roboto,Arial,sans-serif;max-width:850px;margin:0 auto;padding:32px 18px;line-height:1.65;color:#0f172a}
+  h1{font-size:38px;margin:.2em 0}
+  h2{margin-top:28px}
+  .muted{color:#475569}
+  code{background:#f1f5f9;padding:2px 6px;border-radius:6px}
+  .box{border:1px solid #e5e7eb;border-radius:12px;padding:16px;background:#fff}
+  table{width:100%;border-collapse:collapse;margin-top:8px}
+  th,td{border:1px solid #e5e7eb;padding:10px}
+  th{background:#f8fafc;text-align:left}
+</style>
+</head><body>
+<h1>PoorCoin (POOR)</h1>
+<p class="muted">The People’s Meme Token — BNB Smart Chain (BEP-20)</p>
 
-  <!-- Вграден базов стил (можеш да го махнеш, ако ползваш style.css) -->
-  <style>
-    :root{
-      --bg:#f7fbf7; --card:#ffffff; --ink:#1d2b22; --muted:#5b6a60; --brand:#16a34a;
-      --soft:#eaf6ea; --ring:#def5df;
-    }
-    *{box-sizing:border-box}
-    html,body{margin:0;padding:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial,sans-serif;color:var(--ink);background:linear-gradient(180deg,#f6fff6, #f5faf6 40%, #f7fbf7);}
-    a{color:#0f766e;text-decoration:none}
-    a:hover{text-decoration:underline}
-    .site{padding:32px 16px 64px}
-    .wrap{max-width:1100px;margin:0 auto}
-    header .back{font-size:.95rem}
-    header h1{display:flex;align-items:center;gap:12px;margin:10px 0 6px}
-    header h1 img{width:42px;height:42px;border-radius:50%}
-    header .sub{color:var(--muted);font-weight:500;margin:0 0 20px}
+<h2>Overview</h2>
+<p>PoorCoin (POOR) is a community-driven meme token on the BNB Smart Chain. The project focuses on transparency, fair distribution, and a simple narrative: a meme token for ordinary people building together. Liquidity is added on PancakeSwap and the contract is verified on BscScan.</p>
 
-    .grid{display:grid;grid-template-columns:1.2fr .8fr;gap:18px}
-    @media (max-width:940px){.grid{grid-template-columns:1fr;}}
-    .card{background:var(--card);border-radius:16px;padding:18px;box-shadow:0 1px 0 rgba(0,0,0,.04), 0 10px 20px -12px rgba(0,0,0,.08);border:1px solid var(--ring)}
-    .card h2, .card h3{margin:8px 0 12px}
-    .pill{display:inline-block;padding:.35rem .6rem;border-radius:999px;background:var(--soft);border:1px solid var(--ring);font-size:.8rem;margin:.2rem .25rem .2rem 0}
-    .muted{color:var(--muted)}
+<h2>Key Information</h2>
+<div class="box">
+  <p><strong>Ticker:</strong> POOR<br>
+  <strong>Standard:</strong> BEP-20<br>
+  <strong>Decimals:</strong> 18<br>
+  <strong>Contract:</strong> <code>0x6208384e2dda2ab804a5b75aebc1609ba9ce7336</code></p>
+  <p><strong>Pair (PancakeSwap V2):</strong> POOR/WBNB — analytics link on site.</p>
+</div>
 
-    .btn{display:inline-flex;align-items:center;justify-content:center;gap:.5rem;border-radius:12px;border:1px solid var(--ring);background:#fff;padding:.65rem .9rem;cursor:pointer;font-weight:600}
-    .btn:focus{outline:3px solid #b7f7bf;outline-offset:2px}
-    .btn.primary{background:var(--brand);color:#fff;border-color:#0d8b39}
-    .btn.ghost{background:#fff}
-    .btn.tiny{padding:.35rem .5rem;border-radius:10px;font-size:.85rem}
-    .stack{display:flex;flex-wrap:wrap;gap:.5rem}
+<h2>Tokenomics</h2>
+<table>
+  <thead><tr><th>Category</th><th>Amount</th><th>%</th></tr></thead>
+  <tbody>
+    <tr><td>Team / Main wallet (owner)</td><td>779,704,502</td><td>77.97%</td></tr>
+    <tr><td>Locked / Vesting (liquidity locks)</td><td>200,000,000</td><td>20.00%</td></tr>
+    <tr><td>Liquidity (PancakeSwap pool)</td><td>15,750,000</td><td>1.58%</td></tr>
+    <tr><td>Other holders / buyers</td><td>4,545,498</td><td>0.45%</td></tr>
+    <tr><th>Total Supply</th><th>1,000,000,000</th><th>100%</th></tr>
+  </tbody>
+</table>
 
-    .kpi{display:grid;grid-template-columns:repeat(2,minmax(0,1fr));gap:10px}
-    @media (max-width:640px){.kpi{grid-template-columns:1fr}}
-    .kpi .tile{padding:12px;border-radius:12px;background:var(--soft);border:1px solid var(--ring)}
-    .mono{font-family:ui-monospace, SFMono-Regular, Menlo, Consolas, "Liberation Mono", monospace}
-    .warn{background:#fff7ed;border:1px solid #fde2bf;color:#8a4a00;border-radius:12px;padding:12px}
+<h2>Utility & Roadmap</h2>
+<p><strong>Utility:</strong> community meme, social growth, tipping and simple campaigns. Future utilities may include community rewards and mini-games.</p>
+<p><strong>Roadmap (high-level):</strong></p>
+<ul>
+  <li>Phase 1 — Launch, website, verified contract, initial liquidity.</li>
+  <li>Phase 2 — Social growth (Telegram/Twitter), CoinGecko listing request.</li>
+  <li>Phase 3 — Community campaigns, basic rewards, partnerships.</li>
+</ul>
 
-    footer{margin-top:28px;color:var(--muted);font-size:.95rem}
-  </style>
-</head>
-<body>
-  <main class="site">
-    <div class="wrap">
-      <header>
-        <a class="back" href="index.html">← Back to site</a>
-        <h1>
-          <img src="PoorCoin.png" alt="PoorCoin logo" />
-          <span>PoorCoin — <span class="muted">Whitepaper</span></span>
-        </h1>
-        <p class="sub">The community-driven meme token on <strong>BNB Smart Chain (BEP-20)</strong>.</p>
-      </header>
+<h2>Links</h2>
+<ul>
+  <li>Website: <a href="https://poorcoin.net" target="_blank">poorcoin.net</a></li>
+  <li>BscScan: <a href="https://bscscan.com/token/0x6208384e2dda2ab804a5b75aebc1609ba9ce7336" target="_blank">Token page</a></li>
+  <li>PancakeSwap (pair): <a href="https://pancakeswap.finance/info/pairs/0xf6fa8d299245a8627d054632de4b55ee017de723" target="_blank">POOR/WBNB</a></li>
+  <li>Telegram: <a href="https://t.me/poorcoin_bsc" target="_blank">@poorcoin_bsc</a></li>
+  <li>Twitter/X: <a href="https://x.com/SeeeskoTodorov" target="_blank">@SeeeskoTodorov</a></li>
+  <li>Medium: <a href="https://medium.com/@seeesko/poorcoin-poor-the-peoples-meme-token-2c7d47ef2989" target="_blank">Article</a></li>
+</ul>
 
-      <div class="grid">
-        <!-- LEFT -->
-        <section class="card">
-          <h2>Overview</h2>
-          <p>PoorCoin (POOR) is a simple, community-first meme token on the <strong>BNB Smart Chain</strong>.
-            Our goal is to keep things <strong>fun, transparent and fair</strong> while the community experiments and grows together.</p>
-
-          <div class="kpi" style="margin:14px 0 8px">
-            <div class="tile"><div class="muted">Ticker</div><div><strong>POOR</strong></div></div>
-            <div class="tile"><div class="muted">Chain</div><div><strong>BSC (BEP-20)</strong></div></div>
-            <div class="tile"><div class="muted">Total supply</div><div><strong>1,000,000,000 POOR</strong></div></div>
-            <div class="tile"><div class="muted">Contract</div><div class="mono" id="addrShort">—</div></div>
-          </div>
-
-          <div class="stack" style="margin:8px 0 16px">
-            <a id="buyTop" class="btn primary" href="#" target="_blank" rel="noopener">Buy on PancakeSwap</a>
-            <a id="dexTop" class="btn ghost" href="#" target="_blank" rel="noopener">Live chart (DEXTools)</a>
-          </div>
-
-          <h3>Tokenomics</h3>
-          <ul>
-            <li><strong>Supply:</strong> fixed at 1,000,000,000 POOR.</li>
-            <li><strong>Liquidity:</strong> community-driven. Current est.: <em>12,000,000 POOR + 0.011 BNB</em>.</li>
-            <li><strong>In circulation (wallet):</strong> <em>~695,089,465 POOR</em> (displayed on the homepage).</li>
-            <li><strong>Taxes & ownership:</strong> none taken by code; contract is a standard BEP-20.</li>
-          </ul>
-
-          <h3>Vision</h3>
-          <p>Keep it lightweight and fair: a meme coin that’s actually owned and pushed by its community — open links,
-            verifiable contract, simple rules. We ship small, public improvements and let holders steer the direction.</p>
-
-          <h3>Roadmap (high-level)</h3>
-          <ol>
-            <li><strong>Phase 1:</strong> Launch site, socials, initial LP, basic listings (DEXTools).</li>
-            <li><strong>Phase 2:</strong> Community growth (Telegram/X), small bounties, improve docs (this page).</li>
-            <li><strong>Phase 3:</strong> Apply to major trackers (CoinGecko/CoinMarketCap) and light integrations.</li>
-            <li><strong>Phase 4:</strong> Utilities decided by the community; seasonal campaigns.</li>
-          </ol>
-
-          <div class="warn" style="margin-top:12px">
-            <strong>Disclaimer:</strong> POOR is a meme token with no promise of financial return. Crypto is risky —
-            always do your own research and double-check the contract on BscScan before any transaction.
-          </div>
-        </section>
-
-        <!-- RIGHT -->
-        <aside class="card">
-          <h2>Smart Contract</h2>
-          <p class="muted">Standard BEP-20 token. Always verify the address on BscScan before any transaction.</p>
-
-          <div class="tile" style="margin:10px 0">
-            <div class="muted">Contract (BSC)</div>
-            <div class="mono" id="addrFull" style="word-break:break-all"></div>
-          </div>
-
-          <div class="stack" style="margin-bottom:14px">
-            <button id="copyBtn" class="btn tiny ghost">Copy</button>
-            <a id="bscBtn" class="btn tiny ghost" href="#" target="_blank" rel="noopener">View on BscScan</a>
-            <button id="mmBtn" class="btn tiny ghost">Add to MetaMask</button>
-          </div>
-
-          <h3>Official links</h3>
-          <div class="stack">
-            <a class="btn tiny ghost" href="https://t.me/poorcoin_bsc" target="_blank" rel="noopener">Telegram</a>
-            <a class="btn tiny ghost" href="https://x.com/SeeeskoTodorov" target="_blank" rel="noopener">X (Twitter)</a>
-            <a id="pcsBtn" class="btn tiny ghost" href="#" target="_blank" rel="noopener">Pa
+<hr>
+<p><strong>© <script>document.write(new Date().getFullYear())</script> PoorCoin.</strong> <strong>BY TODOROV & LESEV</strong></p>
+</body></html>
