--- a/index.html
+++ b/index.html
@@ -1,123 +1,142 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PoorCoin (POOR) — Official Site</title>
-  <meta name="description" content="PoorCoin (POOR) — The People's Meme Token on BNB Smart Chain (BEP-20). Contract, links, tokenomics, FAQ and whitepaper." />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&display=swap" rel="stylesheet">
   <style>
-    :root{
-      --bg:#0f172a;           /* slate-900 */
-      --card:#111827;         /* gray-900 */
-      --muted:#94a3b8;        /* slate-400 */
-      --text:#e5e7eb;         /* gray-200 */
-      --accent:#22d3ee;       /* cyan-400 */
-      --accent-2:#a78bfa;     /* violet-400 */
-      --ok:#10b981;           /* emerald-500 */
-      --chip:#1f2937;         /* gray-800 */
-      --shadow: 0 10px 30px rgba(0,0,0,.35);
-      --radius:16px;
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f7fb;
+      margin: 0;
+      padding: 0;
+      color: #222;
     }
-    *{box-sizing:border-box}
-    html,body{margin:0;background:radial-gradient(1200px 800px at -10% -20%, rgba(34,211,238,.15), transparent 60%), radial-gradient(900px 600px at 120% -10%, rgba(167,139,250,.12), transparent 60%), var(--bg); color:var(--text); font-family:Inter,system-ui,Segoe UI,Roboto,Arial,sans-serif}
-    a{color:inherit}
-    .wrap{max-width:1100px;margin:0 auto;padding:28px 18px 80px}
-    header{display:flex;align-items:center;gap:14px}
-    .badge{background:#fff;border-radius:10px;padding:6px 10px;color:#111; font-weight:700; display:inline-flex; align-items:center; gap:8px; box-shadow:var(--shadow)}
-    .logo-badge{width:28px;height:28px;border-radius:7px;display:inline-flex;align-items:center;justify-content:center;background:#fff}
-    .brand{font-size:28px;font-weight:800;letter-spacing:.2px}
-    .sub{color:var(--muted);font-size:14px;margin-top:6px}
-    nav{margin-left:auto;display:flex;gap:10px}
-    .navlink{padding:10px 14px;border-radius:999px;background:transparent;border:1px solid rgba(255,255,255,.12);color:var(--text);text-decoration:none;font-weight:600}
-    .navlink:hover{border-color:rgba(255,255,255,.25);}
-
-    .grid{display:grid;grid-template-columns:1.2fr .9fr; gap:22px; margin-top:24px}
-    .card{background:linear-gradient(180deg, rgba(255,255,255,.04), rgba(255,255,255,.02)); border:1px solid rgba(255,255,255,.08); border-radius:var(--radius); box-shadow:var(--shadow)}
-    .card .inner{padding:20px}
-    .label{font-size:12px;letter-spacing:.12em;text-transform:uppercase;color:var(--muted);font-weight:800}
-
-    .logo-box{background:#fff;border-radius:14px;height:420px;display:flex;align-items:center;justify-content:center; box-shadow:inset 0 0 0 1px #eee}
-    .logo-box img{max-width:78%;height:auto;display:block;filter:drop-shadow(0 8px 24px rgba(0,0,0,.2));}
-
-    .contract{display:flex;flex-direction:column;gap:12px}
-    .addr{display:flex;gap:10px;align-items:center}
-    .addr .chip{background:var(--chip);border-radius:12px;padding:12px 14px;font-family:ui-monospace, SFMono-Regular, Menlo, Consolas, "Liberation Mono", monospace; white-space:nowrap; overflow:auto; max-width:100%;}
-    .btns{display:flex;flex-wrap:wrap;gap:10px}
-    .btn{
-      background:linear-gradient(135deg, var(--accent), var(--accent-2));
-      border:none;color:#001018;font-weight:800;text-decoration:none;
-      padding:12px 16px;border-radius:12px;box-shadow:var(--shadow);
+    header {
+      background: #fff;
+      padding: 15px 30px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      position: sticky;
+      top: 0;
+      z-index: 1000;
     }
-    .btn.secondary{background:#111827;color:#e5e7eb;border:1px solid rgba(255,255,255,.12)}
-    .btn.outline{background:transparent;color:var(--text);border:1px solid rgba(255,255,255,.2)}
-    .btn.small{padding:8px 12px;font-weight:700}
-    .copy{background:#0b1220;color:#b5e3ff;border:1px solid rgba(255,255,255,.2)}
-    .kpis{display:grid;grid-template-columns:repeat(3,1fr);gap:10px;margin-top:6px}
-    .kpi{background:rgba(255,255,255,.04);border:1px solid rgba(255,255,255,.08);border-radius:12px;padding:10px;text-align:center}
-    .kpi h4{margin:0;font-size:18px}
-    .kpi p{margin:4px 0 0;color:var(--muted);font-size:12px}
-
-    .section{margin-top:28px}
-    table{width:100%;border-collapse:collapse;border-radius:12px;overflow:hidden}
-    th,td{padding:12px 14px;border-bottom:1px solid rgba(255,255,255,.08)}
-    th{background:rgba(255,255,255,.05);text-align:left;font-size:13px;color:#cbd5e1}
-    tr:last-child td{border-bottom:none}
-    .good{color:var(--ok);font-weight:700}
-
-    .chips{display:flex;gap:8px;flex-wrap:wrap;margin-top:12px}
-    .pill{background:var(--chip);border:1px solid rgba(255,255,255,.1);color:#d1d5db;border-radius:999px;padding:8px 12px;font-weight:700}
-
-    .links{display:grid;grid-template-columns:1fr 1fr; gap:12px}
-    .link{display:flex;justify-content:space-between;align-items:center;background:rgba(255,255,255,.04);border:1px solid rgba(255,255,255,.08);border-radius:12px;padding:12px 14px}
-    .link span{color:var(--muted)}
-    .link a{font-weight:800;text-decoration:none;background:#0b1220;color:#c8d9ff;border:1px solid rgba(255,255,255,.18);padding:6px 10px;border-radius:8px}
-
-    details{background:rgba(255,255,255,.04);border:1px solid rgba(255,255,255,.08);border-radius:12px;padding:12px 14px}
-    summary{cursor:pointer;font-weight:800}
-    details p{margin:8px 0 0;color:#cbd5e1}
-
-    footer{margin-top:38px;text-align:center;color:#d1d5db}
-    footer .by{font-weight:900; letter-spacing:.06em; margin-top:6px}
-    .okchip{display:inline-flex;gap:8px;align-items:center;background:rgba(16,185,129,.1);border:1px solid rgba(16,185,129,.35);color:#a7f3d0;padding:8px 12px;border-radius:999px;font-weight:800}
-    @media (max-width:900px){ .grid{grid-template-columns:1fr} .logo-box{height:360px} }
+    header img {
+      height: 40px;
+    }
+    nav a {
+      margin: 0 12px;
+      text-decoration: none;
+      color: #333;
+      font-weight: bold;
+    }
+    nav a:hover {
+      color: #007bff;
+    }
+    .container {
+      max-width: 1100px;
+      margin: 20px auto;
+      padding: 20px;
+    }
+    .card {
+      background: #fff;
+      padding: 20px;
+      margin-bottom: 20px;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+    }
+    h2 {
+      margin-top: 0;
+    }
+    .buttons a {
+      display: inline-block;
+      margin: 8px 10px 0 0;
+      padding: 10px 16px;
+      background: #007bff;
+      color: #fff;
+      border-radius: 6px;
+      text-decoration: none;
+      font-size: 14px;
+    }
+    .buttons a:hover {
+      background: #0056b3;
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+      margin-top: 40px;
+      background: #fff;
+      border-top: 1px solid #ddd;
+    }
+    html {
+      scroll-behavior: smooth;
+    }
   </style>
 </head>
 <body>
-  <div class="wrap">
-    <header>
-      <span class="badge"><span class="logo-badge">🟦</span> POOR</span>
-      <div>
-        <div class="brand">PoorCoin (POOR)</div>
-        <div class="sub">The People’s Meme Token — BNB Smart Chain (BEP-20)</div>
-      </div>
-      <nav>
-        <a class="navlink" href="#tokenomics">Tokenomics</a>
-        <a class="navlink" href="#links">Links</a>
-        <a class="navlink" href="whitepaper.html" target="_blank">Whitepaper</a>
-      </nav>
-    </header>
 
-    <div class="grid">
-      <!-- Left: Logo -->
-      <section class="card">
-        <div class="inner">
-          <div class="label">Official logo</div>
-          <div class="logo-box">
-            <!-- твоето PNG лого -->
-            <img src="poorcoin_logo.png" alt="PoorCoin Logo" />
-          </div>
-          <div class="chips">
-            <span class="okchip">✔ Contract verified on BscScan</span>
-          </div>
-        </div>
-      </section>
+<header>
+  <img src="poorcoin_logo.png" alt="PoorCoin Logo">
+  <nav>
+    <a class="navlink" href="#tokenomics" data-scroll="#tokenomics">Tokenomics</a>
+    <a class="navlink" href="#project-links" data-scroll="#project-links">Links</a>
+    <a class="navlink" href="whitepaper.html" target="_blank">Whitepaper</a>
+  </nav>
+</header>
 
-      <!-- Right: Contract & Buttons -->
-      <section class="card">
-        <div class="inner contract">
-          <div class="label">Contract Address (BEP-20)</div>
-          <div class="addr">
-            <div id="addr" class="chip">0x6208384e2dda2ab804a5b75aebc1609ba9ce7336</div>
-            <button id="copyBtn" class="btn
+<div class="container">
+  <section class="card">
+    <h2>POOR — The People's Meme Token (BEP-20)</h2>
+    <p><strong>Contract Address:</strong></p>
+    <p style="background:#eee;padding:8px;border-radius:6px;word-break:break-all;">
+      0x6208384e2dda2ab804a5b75aebc1609ba9ce7336
+    </p>
+    <div class="buttons">
+      <a href="https://bscscan.com/token/0x6208384e2dda2ab804a5b75aebc1609ba9ce7336" target="_blank">View on BscScan</a>
+      <a href="https://pancakeswap.finance/info/pairs/0xf6fa8d299245a8627d054632de4b55ee017de723" target="_blank">Buy on PancakeSwap</a>
+      <a href="https://pancakeswap.finance/add/BNB/0x6208384e2dda2ab804a5b75aebc1609ba9ce7336" target="_blank">Add Liquidity</a>
+    </div>
+  </section>
+
+  <section id="tokenomics" class="card">
+    <h2>Tokenomics</h2>
+    <p>Total Supply: 1,000,000,000 POOR</p>
+    <ul>
+      <li><b>Team / Main wallet:</b> 779,704,502 POOR (77.97%)</li>
+      <li><b>Locked (vesting):</b> 200,000,000 POOR (20%)</li>
+      <li><b>Liquidity (PancakeSwap):</b> 15,750,000 POOR (1.58%)</li>
+      <li><b>Other holders / buyers:</b> 4,545,498 POOR (0.45%)</li>
+    </ul>
+  </section>
+
+  <section id="project-links" class="card">
+    <h2>Project Links</h2>
+    <ul>
+      <li><a href="https://poorcoin.net" target="_blank">Website</a></li>
+      <li><a href="https://t.me/poorcoin_bsc" target="_blank">Telegram</a></li>
+      <li><a href="https://twitter.com/SeeeskoTodorov" target="_blank">Twitter / X</a></li>
+      <li><a href="https://medium.com/@seeesko/poorcoin-poor-the-peoples-meme-token-2c7d47ef2989" target="_blank">Medium</a></li>
+    </ul>
+  </section>
+</div>
+
+<footer>
+  <p>© 2025 PoorCoin. All Rights Reserved.</p>
+  <p><b>BY TODOROV & LESEV</b></p>
+</footer>
+
+<script>
+// плавен скрол към секции
+document.querySelectorAll('[data-scroll]').forEach(a=>{
+  a.addEventListener('click', e=>{
+    e.preventDefault();
+    const target = document.querySelector(a.dataset.scroll);
+    if (target) target.scrollIntoView({ behavior: 'smooth', block: 'start' });
+  });
+});
+</script>
+
+</body>
+</html>
